<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<!--Inventory Number-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="@dimen/margin_screen">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/half_margin_screen"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/inventory_number"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/input_inventory_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:hint="@string/inventory_number"
            android:inputType="text"
            android:textSize="14sp"/>

    </LinearLayout>
<!--    Divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="@dimen/margin_screen">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/half_margin_screen"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/asset_name"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/input_asset_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:hint="Asset Name"
            android:inputType="text"
            android:textSize="14sp"/>

    </LinearLayout>
    <!--    Divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
<!--    Asset No-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="@dimen/margin_screen">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/half_margin_screen"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/asset_no"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck" />
        <EditText
            android:id="@+id/input_asset_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:hint="@string/asset_no"
            android:inputType="number"
            android:textSize="14sp"/>

    </LinearLayout>
    <!--    Divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <!--    Department-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="@dimen/margin_screen">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/half_margin_screen"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/department"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/input_department"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:hint="@string/department"
            android:inputType="number"
            android:textSize="14sp"/>

    </LinearLayout>
    <!--    Divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <!--    Cost Center-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="@dimen/margin_screen">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/half_margin_screen"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/cost_center"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/input_cost_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:hint="@string/cost_center"
            android:inputType="text"
            android:textSize="14sp"/>

    </LinearLayout>
    <!--    Divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <!--    Label Status-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="@dimen/margin_screen">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/half_margin_screen"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/label_status"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical">
        <CheckBox
            android:id="@+id/checkbox_label_status_good"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/good"
            android:textSize="14sp"
            />
            <CheckBox
                android:id="@+id/checkbox_label_status_bad"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/blur"
                android:textSize="14sp"
                />
        </LinearLayout>

    </LinearLayout>
    <!--    Divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <!--   Asset Status-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="@dimen/margin_screen">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/half_margin_screen"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/asset_status"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical">
            <CheckBox
                android:id="@+id/checkbox_asset_status_good"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/using"
                android:textSize="14sp"
                />
            <CheckBox
                android:id="@+id/checkbox_asset_status_bad"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/no_use"
                android:textSize="14sp"
                />
        </LinearLayout>

    </LinearLayout>

    <!--    Location-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="@dimen/margin_screen">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/half_margin_screen"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/input_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:hint="@string/location"
            android:inputType="text"
            android:textSize="14sp"/>

    </LinearLayout>
    <!--    Button-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_screen"
        android:orientation="horizontal">
    <!--    Confirm Button-->
        <Button
            android:id="@+id/confirm_btn"
            style="@style/ButtonCustomStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_screen"
            android:layout_gravity="center_vertical"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:backgroundTint="@color/secondary"
            />
    <!--    Clear Button-->
        <Button
            android:id="@+id/clear_btn"
            style="@style/ButtonCustomStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_dark"
            />
    </LinearLayout>

</LinearLayout>